# django_template

./: pyproject.toml
project_name/: settings.py  wsgi.py
scripts/: manage.py
