[tool.poetry]
name = "django_template"
version = "0.1.0"
description = ""
authors = ["Daniil Andreev <d2234@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
gunicorn = "^20.1"

[tool.poetry.dev-dependencies]
coverage = "^6.0"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
